Added right csv to resources

--- a/preprocessing-videogames.ipynb
+++ b/preprocessing-videogames.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "6fba4f4e",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "fbf703ff",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "4  /games/boxart/full_7295041AmericaFrontccc.jpg  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "92f62257",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "b41acdd0",
    "metadata": {
     "scrolled": true
@@ -493,7 +493,7 @@
        "4        NaN       NaN          NaN  2009.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "71259c3d",
    "metadata": {},
    "outputs": [
@@ -653,7 +653,7 @@
        "4       NaN          NaN  2009.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "8ff76550",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3446371f",
+   "id": "d2fb0204",
    "metadata": {},
    "outputs": [
     {
@@ -933,6 +933,28 @@
    ],
    "source": [
     "vgames.Genre.value_counts().head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ba079d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgames = vgames.rename(columns={'basename': 'game'})\n",
+    "vgames.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5919cb20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgames.drop(['Rank'], axis=1, inplace=True)\n",
+    "vgames.to_csv('resources/vgames_clean.csv')"
    ]
   },
   {
@@ -2164,12 +2186,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "01fc6948",
+   "id": "9eff9cd3",
    "metadata": {},
    "outputs": [],
    "source": [
     "first_column = vgames.pop('game')\n",
-    "vgames.drop(['Rank'], axis=1, inplace=True)\n",
     "\n",
     "vgames.insert(0, 'game', first_column)"
    ]
@@ -3364,16 +3385,6 @@
    ],
    "source": [
     "vgames.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "ada9e5cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vgames.to_csv('resources/vgames_clean.csv')"
    ]
   },
   {
@@ -6895,7 +6906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be28eb8e",
+   "id": "35310a87",
    "metadata": {},
    "outputs": [],
    "source": []
