added form reset code in rec

--- a/videogames-ml.ipynb
+++ b/videogames-ml.ipynb
@@ -302,6 +302,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "ddbea867",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PS3     266\n",
+       "X360    265\n",
+       "PS2     117\n",
+       "PSP      99\n",
+       "DS       89\n",
+       "Wii      87\n",
+       "3DS      81\n",
+       "PS       78\n",
+       "PS4      57\n",
+       "NS       43\n",
+       "GC       29\n",
+       "WiiU     25\n",
+       "GBA      24\n",
+       "N64      14\n",
+       "XOne     11\n",
+       "XB        7\n",
+       "GBC       2\n",
+       "DC        2\n",
+       "GB        1\n",
+       "SAT       1\n",
+       "PSN       1\n",
+       "PSV       1\n",
+       "Name: Platform, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_df['Platform'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "17c9ba93",
    "metadata": {},
